Fixed spacing of homepage feature page elements

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -10,6 +10,11 @@
   width: 200px;
 }
 
+.cell {
+  padding-top: 18px !important;
+  padding-bottom: 18px !important;
+}
+
 /* Animations */
 
 @keyframes mergeAnimation {
